Conexión con cassandra establecida

--- a/Desktop_App/nbproject/project.properties
+++ b/Desktop_App/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Desktop_App.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.cassandra-jdbc-driver-0.6.4-shaded.jar=..\\Jar\\cassandra-jdbc-driver-0.6.4-shaded.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.cassandra-jdbc-driver-0.6.4-shaded.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
