agregado date chooser

--- a/Desktop_App/nbproject/project.properties
+++ b/Desktop_App/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/Desktop_App.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.cassandra-jdbc-driver-0.6.4-shaded.jar=..\\Jar\\cassandra-jdbc-driver-0.6.4-shaded.jar
+file.reference.jcalendar-1.4.jar=../Jar/jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.cassandra-jdbc-driver-0.6.4-shaded.jar}
+    ${file.reference.cassandra-jdbc-driver-0.6.4-shaded.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
